--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -14,6 +14,7 @@ on:
 
 env:
   image_name: ghcr.io/${{ github.repository_owner }}/caddy-lego
+  platforms: linux/amd64,linux/arm64
 
 jobs:
   build:
@@ -25,34 +26,46 @@ jobs:
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2.5.0
+        uses: docker/setup-buildx-action@v2
 
       - name: Build the container image
-        uses: docker/build-push-action@v4.0.0
+        if: github.event_name == 'pull_request'
+        uses: docker/build-push-action@v4
         with:
           build-args: |
             BUILDKIT_INLINE_CACHE=1
           cache-from: |
             ${{ env.image_name }}
-          platforms: |
-            linux/amd64
-            linux/arm64
-          tags: ${{ env.image_name }}
+          platforms: ${{ env.platforms }}
 
       - name: Log in to GitHub container registry
         if: github.event_name == 'push' || github.event_name == 'release'
-        uses: docker/login-action@v2.1.0
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           password: ${{ github.token }}
           username: ${{ github.actor }}
 
-      - name: Push latest image to registry
+      - name: Build and push latest image to registry
         if: github.event_name == 'push'
-        run: docker image push ${{ env.image_name }}
+        uses: docker/build-push-action@v4
+        with:
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
+          cache-from: |
+            ${{ env.image_name }}
+          platforms: ${{ env.platforms }}
+          push: true
+          tags: ${{ env.image_name }}:latest
 
-      - name: Tag and push release image to registry
+      - name: Build and push release image to registry
         if: github.event_name == 'release'
-        run: |
-          docker image tag ${{ env.image_name }}:latest ${{ env.image_name }}:${{ github.event.release.tag_name }}
-          docker image push ${{ env.image_name }}:${{ github.event.release.tag_name }}
+        uses: docker/build-push-action@v4
+        with:
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
+          cache-from: |
+            ${{ env.image_name }}
+          platforms: ${{ env.platforms }}
+          push: true
+          tags: ${{ env.image_name }}:${{ github.event.release.tag_name }}
