--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -28,12 +28,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build the container image
-        if: github.event_name == 'pull_request'
-        uses: docker/build-push-action@v5
-        with:
-          platforms: ${{ env.platforms }}
-
       - name: Log in to GitHub container registry
         if: github.event_name == 'push' || github.event_name == 'release'
         uses: docker/login-action@v3
@@ -41,6 +35,11 @@ jobs:
           registry: ghcr.io
           password: ${{ github.token }}
           username: ${{ github.actor }}
+
+      - name: Build the container image
+        uses: docker/build-push-action@v5
+        with:
+          platforms: ${{ env.platforms }}
 
       - name: Build and push latest image to registry
         if: github.event_name == 'push'
@@ -56,4 +55,4 @@ jobs:
         with:
           platforms: ${{ env.platforms }}
           push: true
-          tags: ${{ env.image_name }}:${{ github.event.release.tag_name }}
+          tags: ${{ env.image_name }}:latest,${{ env.image_name }}:${{ github.event.release.tag_name }}
