--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -19,6 +19,8 @@ env:
 jobs:
   build:
     name: Build the container image
+    permissions:
+      packages: write
     runs-on: ubuntu-latest
     steps:
 
